# esp-idf-http-camera

./: .gitignore  CMakeLists.txt  Makefile  README.md  http_server.py  partitions.csv  sdkconfig  sdkconfig.defaults  server.py  tcp_send.py  udp_send.py
flask/: .python-version  main.py  requirements.txt  upload.py
flask/templates/: _layout.html  index.html  no_permission.html  not_found.html  view.html
main/: CMakeLists.txt  Kconfig.projbuild  camera.c  camera.h  camera_pin.h  cmd.h  gpio.c  http_client.c  http_post.c  http_server.c  idf_component.yml  keyboard.c  main.c  multipart-upload.c  tcp_server.c  udp_server.c  web_server.c
tornado/: upload.py
